#
#############################################################################

########## RECENT CHANGE-LOG #########

  Note that we version STiki by the date (UTC locale) of the build-date. This
  is also the file-name under which the executable/source is released. The 
  formal version number (e.g., 2.1) is in too many places to be 
  conveniently altered for small changes:
  
  * 2015-06-13 - EMERGENCY RELEASE
  		# The WMF now requires all communication to be HTTPS. While STiki has 
  		  long had an HTTPS option, for those that did not have it enabled, 
  		  all API requests began failing when the change was initiated. STiki
  		  now uses HTTPS only and the option has been removed from the menu.
  		  Several hard-coded paths were also discovered in the code.
      # Resolved issue where custom AGF messages were not saving and 
        persisting between edits/sessions (T#051).
  
  * 2014-12-12
      # Something seems to have changed with the way Mediawiki parses 
        new line instructions, causing section headers to not be displayed, 
        and causing warnings to run together. STiki has changed line breaks 
        on talk pages messages from "/r" (carriage return) to "/n" (newline).
  
  * 2014-12-01
      # The "Options" menu now has setting that allows clients to be notified
        via pop-up if an AIV post has been lodged (T#018; T#046).
      # Null diffs should no longer be displayed (T#038). This was a bug
        introduced when STiki enabled custom color options for users.
      # Users will not be displayed their own edits from the queues, as this
        is a conflict of interest (T#043).
      # More AGF messages were added, including some pulled in from a GitHub
        merge (our first community code contribution!). Some category
        labels were pre-pended to help better manage this growing list.
        The code copy was also synced with community copy at: